--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<div class="loadingspinner"></div>
+	<div class="loadingSpinner"></div>
 </body>
 </html>
